# Dataflow

./: .gitignore  README.md  pyproject.toml  requirements.txt
agentic_data_analyst_mcp/: .env_example
agentic_data_analyst_mcp/app/: __init__.py  config.py  main.py
agentic_data_analyst_mcp/app/adapter/: __init__.py  csv_adapter.py
agentic_data_analyst_mcp/app/core/: __init__.py  data_analysis.py  report_generation.py
agentic_data_analyst_mcp/app/models/: base_models.py
agentic_data_analyst_mcp/app/tools/: tool_analyze_data.py  tool_discover_schema.py
agentic_data_analyst_mcp/app/utils/: io_utils.py
agentic_data_analyst_mcp/tests/: test_analysis.py
app/adapter/: sql_adapter.py
app/core/: data_visualization.py  relationship_discovery.py  schema_discovery.py
app/models/: __init__.py
app/tool/: __init__.py  tool_find_relationship.py  tool_visualize_data.py
app/tools/: tool_generate_report.py
app/utils/: __init__.py  data_checks.py  logger.py
tests/: test_schema_discovery.py
