[tool.poetry]
name = "agentic-data-analyst-mcp"
version = "0.1.0"
description = "An MCP server for agentic data analysis with schema discovery, relationships, and reporting"
authors = ["James w. Ngaruiya <jameswachacha@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mcp = "^1.0.0"
pandas = "^2.1.0"
numpy = "^1.26.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
plotly = "^5.18.0"
pydantic = "^2.5.0"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.0"
openpyxl = "^3.1.0"
jinja2 = "^3.1.0"
scipy = "^1.11.0"
scikit-learn = "^1.3.0"
markdown = "^3.5.0"
pdfkit = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.11.0"
ruff = "^0.1.6"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true